change: Rewrite trade schema
resolves #29
resolves #28